# awesome-graph-dataset

./: .gitattributes  .gitignore  .pdm-python  .readthedocs.yaml  CONTRIBUTING.md  README.md  build.py  build_site.py  mkdocs.yml  pyproject.toml
.github/workflows/: pypi-release.yaml
datasets/fraud_detection/: fraud_detection_loading.ipynb  importer.yaml  metadata.yaml  nebulagraph.html  nebulagraph_schema.html  schema.ddl.ngql
datasets/fraud_detection/small/: applicant_application_with_is_related_to.csv  applicant_application_with_shared_device.csv  applicant_application_with_shared_employer.csv  applicant_application_with_shared_phone_num.csv  applicant_application_with_shared_via_employer_phone_num.csv  corporation.csv  device.csv  is_relative_relationship.csv  person.csv  phone_number.csv  shared_device_relationship.csv  shared_employer_relationship.csv  shared_phone_num_relationship.csv  shared_via_employer_phone_num_relationship.csv
datasets/movie_recommendation/: metadata.yaml  movie_recommendation_loading.ipynb  nebulagraph.html  nebulagraph_schema.html  schema.ddl.ngql
datasets/movie_recommendation/small/: acted_by.csv  acted_by.data.ngql  directed_by.csv  directed_by.data.ngql  genres.csv  genres.data.ngql  movies.csv  people.csv  (+7 more)
datasets/shareholding/: metadata.yaml  nebulagraph_export_shareholding.gexf  nebulagraph_export_shareholding.html  schema.ddl.ngql
datasets/supply_chain/: metadata.yaml  schema.ddl.ngql
docs/: CONTRIBUTING.md  index.md  requirements.txt
src/nebula_loader/: __init__.py  ng_load.py
tools/: importer_v3_to_ng_load_lines.py
(+18 files in other folders)
